--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
         <!-- Портфолио -->
         <section class="portfolio">
             <div class="container">
-            <h1 class="gallery-name">Portfolio</h1>
+            <h1 class="gallery-name visually-hidden">Portfolio</h1>
             <!-- Навигация портфолио -->
             <nav class="nav-gallery">
                 <ul class="nav-gallery-items list">
@@ -213,6 +213,20 @@
                                 </svg></a>
                         </li>
                     </ul>
+                        </div>
+                        <!-- Подпишитесь -->
+                        <div class="subscribe-footer">
+                            <p class="subscribe-footer-title">Подпишитесь на рассылку</p>
+                            <form action="#" class="subscribe-form">
+                                <label class="subscribe-form-field">
+                                    <input type="email" name="user-mail" class="subscribe-form-input" placeholder="E-mail">
+                                </label>
+                                <button type="button" class="subscribe-form-btn">Подписаться
+                                    <svg class="subscribe-icon" width="24" height="24">
+                                        <use href="./images/sprite.svg#icon-plane"></use>
+                                    </svg>
+                                </button>
+                            </form>
                         </div>
             </div>
         </footer>
